# cmake_library_example

./: .gitignore  readme.md
library implementation/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md
library implementation/include/: add_int.hpp  shared.hpp
library implementation/src/: add_int.cpp
usage of library/: CMakeLists.txt  CMakePresets.json  readme.md
usage of library/src/: main.cpp
